# fbt

./: .gitignore  COPYING  Doxyfile  Makefile  Makefile.am  README.md  bootstrap.sh  config.h.in  configure  configure.ac  fb.c  fbt.c  font.c  font.h
gifs/CVS/: Entries  Repository
libfb/: sfb.c  sfb.h  sfb.lo
libsfb/: Makefile.am  font.c  font.h  font_10x20.c  font_6x12.c  font_8x13.c  font_9x15.c  sfb.c  sfb.h
src/: Makefile.am  fbt.c
